--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -1,13 +1,13 @@
 {% load menu %}
 
 <header>
-  <div class="table grid">
-    <div class="cell gc-wide-2 gc-2 gc-tablet-6 gc-mobile-2">
-      <a href="/" id="logo"></a>
-    </div>
+  <div class="row">
+    <div class="flex rc">
+      <div class="logo-box">
+        <a href="/"></a>
+      </div>
 
-    <div class="cell gc-wide-6 gc-6 gc-tablet-2 gc-mobile-2">
-      <div class="menu-wrapper">
+      <div class="menu-box">
         <span id="mobile-menu-button"></span>
 
         <div id="main-menu" class="main-menu">
