--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -5,9 +5,9 @@
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
 @import 'mixins/columns';
+@import 'mixins/filter';
 @import 'mixins/flex';
 @import 'mixins/font_size';
-@import 'mixins/grayscale';
 @import 'mixins/justify_blocks';
 @import 'mixins/linear_gradient';
 @import 'mixins/opacity';
