--- a/src/static/scss/row.scss
+++ b/src/static/scss/row.scss
@@ -17,7 +17,7 @@
 .rc {
   min-height: 1px;
   padding: 0 $grid_space;
-  @include flex(1 1 auto);
+  @include flex(1 1 0);
   @include border-box;
 }
 
