--- a/src/apps/blocks/templates/blocks/sample_block.html
+++ b/src/apps/blocks/templates/blocks/sample_block.html
@@ -1,3 +1,3 @@
-<div style="width:100px; height: 100px; background-color: #ff8080; font-size: 14px">
+<div id="block" style="width:100px; height: 100px; background-color: #ff8080; font-size: 14px">
   {{ block.title }}
 </div>
