--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -33,6 +33,11 @@
           Three
         </label>
       </fieldset>
+      <fieldset>
+        <div class="custom-counter">
+          <input type="number" value="10" name="num" min="0" max="50">
+        </div>
+      </fieldset>
     </form>
 
     <form>
