--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -35,7 +35,7 @@
       </fieldset>
       <fieldset>
         <div class="custom-counter">
-          <input type="number" value="10" name="num" min="0" max="50">
+          <input type="number" value="2" name="num">
         </div>
       </fieldset>
     </form>
