--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -47,7 +47,7 @@ $text_color: #2C3035;
 //=======================
 // Меню
 //=======================
-$menu_burger_color: red;
+$menu_burger_color: #82BD36;
 $menu_burger_width: 28px;
 $menu_burger_line_height: 4px;
 $menu_burger_line_space: 5px;
