--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -25,6 +25,7 @@
   figure, figcaption, footer, header,
   menu, nav, output, ruby, section, summary,
   time, mark, audio, video {
+    min-width: 0;
     margin: 0;
     padding: 0;
     border: 0;
@@ -77,10 +78,11 @@
     }
   }
   input, button, select, textarea {
+    min-width: 0;
+    margin: 0;
     border: 0;
     font: inherit;
     font-size: 100%;
-    margin: 0;
     outline: 0;
     outline-offset: 0;
     vertical-align: middle;
@@ -96,7 +98,7 @@
   }
   label {
     display: inline-block;
-    
+
     &[for] {
       cursor: pointer;
     }
