--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="grid-block">
     <div class="copyright">
-      &copy; {% now "Y" %} Direktline Develorment
+      &copy; {% now "Y" %} Direktline Development
     </div>
 
     <div class="dl-logo">
