--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -39,10 +39,13 @@
   vertical-align: middle;
   margin: 60px auto;
   max-width: 80%;
-  min-width: 500px;
-  @include media_interval(0, $media768) {
-    min-width: 200px;
+  min-width: 400px;
+  @include media_interval($media480, $media640) {
     max-width: 90%;
+    min-width: 320px;
+  }
+  @include media_interval(0, $media480) {
+    min-width: 240px;
   }
 }
 
@@ -54,12 +57,13 @@
   text-align: initial;
   background-color: #0B0;
   @include border-box;
-  @include media_interval($media480, $media768) {
+  @include media_interval($media480, $media640) {
     padding: 36px;
+    min-height: 180px;
   }
   @include media_interval(0, $media480) {
     padding: 20px 20px 36px;
-    min-height: 100px;
+    min-height: 150px;
   }
 
   .title {
