--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -4,3 +4,36 @@
 #content {
   background-color: #F2F2F2;
 }
+
+#parallax {
+  position: relative;
+  z-index: 1;
+  height: 400px;
+}
+
+#test {
+  position: relative;
+  z-index: 1;
+  height: 1200px;
+  @include linear-gradient(to bottom, #808080, #d0d0d0);
+
+  .layer {
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 80px;
+    height: 80px;
+    z-index: 2;
+    background: red;
+  }
+
+  .sticky {
+    position: absolute;
+    top: 0;
+    left: 200px;
+    width: 80px;
+    height: 80px;
+    z-index: 2;
+    background-color: blue;
+  }
+}
