--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -4,10 +4,15 @@
   position: absolute;
   left: 50%;
   top: 0;
-  min-width: 100.1%;
-  min-height: 100.1%;
+  min-width: 100%;
+  min-height: 100%;
   max-width: none;
   z-index: 1;
+  text-align: center;
   @include transform(translateX(-50%));
   @include backface-visibility(hidden);
+
+  @at-root .js & {
+    display: none;
+  }
 }
